--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ textarea {
   color: #555;
   background: rgb(252, 248, 243);
   padding:15px;
+  resize: none;
 }
 textarea:focus,
 textarea:hover {
